Updated SecurityConfig